--- a/Libs/Tensorflow/models/deeplab/Mask_to_png_batch.ipynb
+++ b/Libs/Tensorflow/models/deeplab/Mask_to_png_batch.ipynb
@@ -438,7 +438,8 @@
     "                print('other')\n",
     "\n",
     "        org_img = np.zeros((Height,Width),dtype=np.uint8)\n",
-    "        mask = cv2.fillPoly(org_img, person, 1) #先畫人\n",
+    "        for p in person:"
+    "           mask = cv2.fillPoly(org_img, [p], 1) #先畫人\n",
     "        mask = cv2.fillPoly(mask, background, 0)  #再補空洞\n",
     "        mask = mask.astype(np.int64)\n",
     "        seg_image = label_to_color_image(mask).astype(np.uint8)\n",
